Redusere antall varianter av produktside

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-mini lg:grid-cols-maxi" x-bind:inert="menuOpen || notifyOpen">
+<footer class="grid pb-12 text-white bg-deepblue-800 grid-left-1 lg:grid-cols-left-2" x-bind:inert="menuOpen || notifyOpen">
   <div class="col-wide">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
