--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <nav class="z-10 grid bg-white grid-cols-mini lg:grid-cols-maxi">
+  <nav class="z-10 grid bg-white grid-left-1 lg:grid-cols-left-2">
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-wide">
 
       {# Logo #}
@@ -25,7 +25,7 @@
 
 
       {# Menu Buttons #}
-      {%- set menuButtonClasses = "flex items-center justify-center pl-2 pr-3 leading-none font-semibold gap-1 text-blue-500 rounded min-w-16 py-2 fine:hover:bg-slate-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
+      {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-2 pr-3 leading-none font-semibold gap-1 text-blue-500 rounded min-w-16 py-2 text-sm xs:text-base fine:hover:bg-slate-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
       <div class="flex self-center sm:gap-1 py-2 justify-self-end xs:-mr-2.5">
         <button class="{{ menuButtonClasses }}" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false" x-bind:aria-expanded="loginOpen">
@@ -49,10 +49,10 @@
           <template x-if="menuOpen">
             {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
           </template>
-          <span class="mt-px">Meny</span>
+          <span class="mt-px">Meny og søk</span>
         </button>
 
-        <span class="self-stretch order-1 hidden w-px my-2 transition-colors duration-100 bg-gray-300 sm:block peer-hover:bg-transparent" aria-hidden="true"></span>
+        <span class="self-stretch order-1 hidden w-px my-1.5 transition-colors duration-100 bg-gray-300 xs:block peer-hover:bg-transparent" aria-hidden="true"></span>
     </div>
   </nav>
   {%- include "partials/navigation.njk" -%}
