--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -3,7 +3,7 @@
 
   {# Rollebytte #}
   <div class="py-3 px-edge bg-slate-200">
-    <div class="grid content-center -mx-1 xs:gap-1 sm:gap-3 xs:text-center xs:-mx-5 sm:mx-0 xs:justify-center xs:grid-flow-col max-w-wide">
+    <div class="grid content-center -mx-1 xs:gap-1 sm:gap-3 xs:text-center xs:-mx-5 sm:mx-0 xs:justify-center xs:grid-flow-col max-w-wide lg:mx-auto">
     {% for role in audience %}
       <a href="#" class="block py-1 px-5 rounded-full {{ 'bg-blue-500 text-white' if activeRole === role.title }}">{{ role.title }}</a>
     {% endfor %}
