--- a/src/index.njk
+++ b/src/index.njk
@@ -31,7 +31,7 @@ noJS: true
 
 {%- block content -%}
 <div class="py-page px-edge">
-  <div class="grid items-start w-full max-w-screen-md gap-2 mx-auto">
+  <div class="grid items-start w-full max-w-screen-md gap-2 mx-auto overflow-clip rounded-xl">
     {% for item in pages %}      
     {{ link(item) }}
     {% endfor %}
