--- a/src/pages/produkt/alderspensjon/alderspensjon.njk
+++ b/src/pages/produkt/alderspensjon/alderspensjon.njk
@@ -1,6 +1,6 @@
 ---
 tags: ['produkt']
-description: 'Basert på variant E av pleiepenger.'
+description: 'Sentrert layout for alle skjermstørrelser. Innholdsfortegnelse uten ingress. Mulighet for å bytte kapittel i bunnen av kapittelmeny.'
 permalink: 'produkt/alderspensjon/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -14,11 +14,10 @@ permalink: 'produkt/alderspensjon/index.html'
 
 
 {%- block content -%}
-
   {% set chapters = collections.all | onlyTags('alderspensjon', 'innhold') | sort(false, false, 'data.order') %}
 
-  <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
-    <div class="col-main lg:col-wide">
+  <main class="grid py-16 grid-cols-center ">
+    <div class="col-main">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-4xl/tight text-balance ">{{ title | safe }}</h1>
       <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
@@ -35,65 +34,65 @@ permalink: 'produkt/alderspensjon/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="z-10 mt-8 isolate">
+    <div class="z-10 mt-12 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ol class="grid gap-8 mt-2">
-        {% for chapter in chapters.slice(0, -1) %}
-        <li class="relative grid grid-cols-[auto_1fr] items-baseline lg:-ml-12">
-          <span class="flex items-center justify-center row-span-2 mr-3 leading-none rounded-full w-9 aspect-square bg-slate-100" aria-hidden="true">{{ loop.index }}</span>
-          <a class="p-1 -m-1 text-blue-500 underline hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
+      <ul class="grid gap-3 mt-2">
+        {% for chapter in chapters %}
+        <li class="relative py-1">
+          <a class="flex items-end gap-2 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
+            <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
+            {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-8 h-8 bg-slate-100 p-1.5 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }}
           </a>
-          <p class="col-start-2">{{ chapter.data.ingress | safe }}</p>
+          {# <p class="pr-4 mt-1.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p> #}
         </li>
         {% endfor %}
-      </ol>
+      </ul>
     </div>
 
 
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="grid grid-flow-row-dense pt-32 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
-        <div class=" col-main lg:col-wide">
+      <section class="grid grid-flow-row-dense pt-32 col-full grid-cols-center " id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
+        <div class="col-main lg:col-wide">
           <div class="grid items-end pl-8 rounded-lg bg-slate-100 pt-2xl aspect-[2/1]">
             <span class="font-black -mb-9 text-white text-[20em]/[0.8]">{{ loop.index }}</span>
           </div>
+        </div>
+        <div class="col-main">
           <h2 class="mt-8 font-bold text-3xl/snug text-balance ">{{ chapter.data.title }}</h2>
           <p>{{ chapter.data.ingress | safe }}</p>
         </div>
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | toc | length > 0%}
-        <nav class="relative mt-8 mb-8 lg:order-1 lg:col-side">
-          <h3 class="absolute inset-x-0 top-0 z-20 py-2 font-semibold bg-white">I dette kapittelet</h3>
-          <div class="z-10 lg:sticky lg:top-2">
-            <h3 class="py-1 font-semibold">{{ chapter.data.title }}</h3>
-            <div class="pb-3 toc toc--b toc--sticky">
+        <nav class="mt-8 mb-8">
+          <h3 class="py-1 font-semibold">I dette kapittelet</h3>
+          <div class="pb-3 toc toc--b">
             {{ chapter.templateContent | toc | safe }}
-            </div>
-            <div class="relative border-t border-slate-200" x-data="{ dropdownOpen: false }">
-              <button class="flex items-center gap-1 px-4 py-3 -mx-4 font-semibold text-blue-500 hover:text-blue-600 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
-                <span>Bytt kapittel</span>
-                {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 -translate-x-1 group-aria-expanded:rotate-180') | safe }}
-              </button>
-              <ol class="absolute w-full max-w-md gap-1 px-2 py-1.5 divide-y rounded-lg shadow-lg divide-slate-300 -left-4 top-full bg-slate-100" x-show="dropdownOpen" x-on:click.outside="dropdownOpen = false">
-                {% for chapter in chapters %}
-                <li class="py-1">
-                  {% if loop.index === chapterIndex %}
-                  <span class="flex items-center gap-3 px-3 pt-1.5 pb-1 font-semibold">
-                    {{ chapter.data.title }}
-                    <span class="w-2 h-2 rounded-full bg-slate-500" aria-hidden="true"></span>
-                  </span>
-                  {% else %}
-                  <a class="flex items-center gap-3 px-3 pt-1.5 pb-1 font-semibold text-blue-500 hover:rounded hover:underline hover:bg-blue-100" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
-                    {{ chapter.data.title }}
-                  </a>
-                  {% endif %}
-                </li>
-                {% endfor %}
-              </ol>
-            </div>
+          </div>
+          <div class="relative border-t border-slate-200" x-data="{ dropdownOpen: false }">
+            <button class="flex items-center gap-1 px-3 py-3 -mx-3 font-semibold text-blue-500 hover:text-blue-600 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
+              <span>Bytt kapittel</span>
+              {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 -translate-x-1 group-aria-expanded:rotate-180') | safe }}
+            </button>
+            <ol class="absolute w-full max-w-md gap-1 px-2 py-1.5 divide-y rounded-lg shadow-lg divide-slate-300 -left-4 top-full bg-slate-100" x-show="dropdownOpen" x-on:click.outside="dropdownOpen = false">
+              {% for chapter in chapters %}
+              <li class="py-1">
+                {% if loop.index === chapterIndex %}
+                <span class="flex items-center gap-3 px-3 pt-1.5 pb-1 font-semibold">
+                  {{ chapter.data.title }}
+                  <span class="w-2 h-2 rounded-full bg-slate-500" aria-hidden="true"></span>
+                </span>
+                {% else %}
+                <a class="flex items-center gap-3 px-3 pt-1.5 pb-1 font-semibold text-blue-500 hover:rounded hover:underline hover:bg-blue-100" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
+                  {{ chapter.data.title }}
+                </a>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ol>
           </div>
         </nav>
       {% endif %}
