--- a/src/pages/produkt/pleiepenger/pleiepenger-b.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-b.njk
@@ -1,7 +1,7 @@
 ---
 tags: ['produkt']
 variant: 'B'
-description: 'Bokinspirert innholdsfortegnelse på toppen. Kapittel-meny i hovedspalte på mobil og sidespalte (sticky) på desktop. Mulighet for å bytte kapittel er lagt inni bunnen av hver kapittelmeny.'
+description: 'Innholdsfortegnelse med ingress på toppen. Kapittel-meny i hovedspalte på mobil og sidespalte (sticky) på desktop. Mulighet for å bytte kapittel er lagt inni bunnen av hver kapittelmeny.'
 permalink: 'produkt/pleiepenger/b/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -14,7 +14,7 @@ permalink: 'produkt/pleiepenger/b/index.html'
 
 {% set chapters = collections.all| onlyTags('pleiepenger', 'innhold') | sort(false, false, 'data.order') %}
 
-  <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
+  <main class="grid py-16 grid-left-1 lg:grid-cols-left-2">
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
@@ -49,7 +49,7 @@ permalink: 'produkt/pleiepenger/b/index.html'
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="grid pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
+      <section class="grid pt-12 col-full grid-left-1 lg:grid-cols-left-2" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
         <div class=" col-main lg:col-wide">
           <div class="grid items-end pl-8 rounded-lg bg-slate-100 pt-2xl aspect-[2/1]">
             <span class="font-black -mb-9 text-white text-[20em]/[0.8]">{{ loop.index }}</span>
