--- a/src/pages/produkt/pleiepenger/pleiepenger.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger.njk
@@ -1,13 +1,148 @@
 ---
+tags: ['produkt']
+description: 'Innholdsfortegnelse uten ingress. Kapittelmeny i hovedspalte på mobil og sidespalte på desktop. I sticky kapittelmeny (desktop) vises alle H2, mens H3 vises i aktivt kapittel.'
+
 permalink: 'produkt/pleiepenger/index.html'
 ---
+{%- extends 'base.njk' -%}
 
-{% extends "blank.njk" %}
+{%- from "macros/button.njk" import button -%}
+{%- from "macros/microcard.njk" import microcard -%}
+{%- from "macros/tile.njk" import tile -%}
 
-{% block content %}
-  <div class="grid content-center w-full min-h-screen gap-4 place-items-center">
-    {% for item in collections.all | onlyTags('produkt', 'pleiepenger') %}
-      <a class="px-6 py-4 rounded bg-slate-100 hover:bg-blue-500 hover:text-white" href="{{ item.url }}">{{ item.data.title | safe }} – {{ item.data.variant | safe }}</a>
-    {% endfor %}
-  </div>
+{%- block content -%}
+
+  {% set chapters = collections.all| onlyTags('pleiepenger', 'innhold') | sort(false, false, 'data.order') %}
+
+  <main class="grid py-16 grid-left-1 lg:grid-cols-left-2">
+    <div class="col-main lg:col-wide">
+      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+
+      {# Audience #}
+      <div class="mt-6 -ml-1">
+        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
+          {{ 'For ' if audience }}{{ audience | lower | safe }}
+        </span>
+      </div>
+    </div>
+
+    {# Innholdsfortegnelse #}
+    <div class="z-10 mt-12 isolate">
+      <h2 class="text-base font-semibold">Innhold på siden</h2>
+      <ul class="grid gap-3 mt-2">
+        {% for chapter in chapters.slice(0, -1) %}
+        <li class="relative py-1">
+          <a class="flex items-end gap-2 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
+            {{ chapter.data.title }}
+            <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
+            {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-8 h-8 bg-slate-100 p-1.5 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }}
+          </a>
+          {# <p class="pr-4 mt-1.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p> #}
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+
+    {# Innhold #}
+    <div class="grid pt-24 col-full grid-left-1 lg:grid-cols-left-2" x-data="{ showChapter1: false, showChapter2: false, showChapter3: false, showChapter4: false, showChapter5: false }">
+      <div class="col-main">
+        {% for chapter in chapters %}
+        {% set chapterIndex = loop.index %}
+
+        <section 
+          id="{{ chapter.data.title | slugify }}"
+          class="mt-24" 
+          x-intersect:enter.margin.-10%.0px.-50%.0px="showChapter{{ chapterIndex }} = true"
+          x-intersect:leave.margin.-20%.0px.0%.0px="showChapter{{ chapterIndex }} = false" 
+        >
+          <div class="grid items-end px-3 bg-slate-100 aspect-[2/1] rounded-xl">
+            <span class="text-[360px]/[0.8] inline-block translate-y-8 font-black text-white">
+              {{ chapterIndex }}
+            </span>
+          </div>
+
+          <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+
+          {# Chapter TOC #}
+          {% if chapter.templateContent %}
+          <nav class="px-4 py-4 mt-4 rounded-lg lg:hidden toc bg-slate-100">
+            <h3 class="font-semibold">I dette kapittelet</h3>
+            {{ chapter.templateContent | toc | safe }}
+          </nav>
+          {% endif %}
+
+          {# Main Content #}
+          <div class="mt-8 prose col-main">
+            <p>{{ chapter.data.ingress | safe }}</p>
+            {{ chapter.templateContent | markdown | safe }}
+          </div>
+        </section>
+        {% endfor %}
+      </div>
+
+      {# Chapter TOC #}
+      <nav class="hidden col-side lg:block">
+        <div class="toc toc--multilevel toc--sticky lg:mt-[26.5em] lg:sticky lg:-translate-y-4 lg:top-8">
+        {% for chapter in chapters %}
+        <h3 class="py-1.5 font-semibold">
+          <a href="#{{ chapter.data.title | slugify }}">{{ loop.index }}. {{ chapter.data.title }}</a>
+        </h3>
+          
+        {% if chapter.templateContent %}
+        <div class="pl-3 mb-3 border-l lg:mb-6 border-slate-300" x-show="showChapter{{ loop.index }}">
+          {{ chapter.templateContent | toc | safe }}
+        </div>
+        {% endif %}
+        {% endfor %}
+        </div>
+      </nav>
+
+    </div>
+
+    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
+  </main>
+{%- endblock -%}
+
+
+{% block bodyscript %}
+  <script>
+    const headings = document.querySelectorAll('.prose h3');
+    const headingsArr = Array.from(headings);
+
+    const navItems = document.querySelectorAll('.toc--sticky li');
+
+    function activateNavByIndex(index) {
+      if (headings[index].classList.contains('active'))
+        return;
+
+      const currentActive = document.querySelectorAll('.toc--sticky .active');
+      for (let i = currentActive.length - 1; i >= 0; i--) {
+        currentActive[i].classList.remove('active');
+      }
+      navItems[index].classList.add('active');
+    }
+
+    const intersectionCallback = (entries, observer) => {
+      if (entries[0].intesectionRatio <= 0)
+          return;
+      
+      if (entries[0].intersectionRatio > 0.90) {    
+        activateNavByIndex(headingsArr.indexOf(entries[0].target))
+      }
+    };
+
+    const intersectionOptions = {
+      threshold: 1,
+      rootMargin: '15% 0px -70% 0px'
+    };
+
+    const intersectionObserver = new IntersectionObserver(intersectionCallback, intersectionOptions);
+
+    for (let i = 0; i < headings.length; i++) {
+      intersectionObserver.observe(headings[i]);  
+    }
+
+  </script>
 {% endblock %}
