--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -6,7 +6,7 @@ noJS: true
 {%- extends 'blank.njk' -%}
 
 {% macro link(item) %}
-  <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
+  <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 transition-colors duration-150 has-[a:hover]:text-white">
     <a class="font-semibold text-blue-600 after:absolute hover:text-white after:z-10 after:inset-0" href="{{ item.url }}">
       {{ item.data.title }}
       {% if item.data.variant %}       
@@ -23,20 +23,17 @@ noJS: true
 {% set pages = ['pleiepenger', 'sykepenger', 'alderspensjon'] %}
 
 {%- block content -%}
-  <div class="py-page px-edge">
+  <div class="py-page px-edge font-[375]">
     <a class="inline-flex items-center gap-1 px-3 py-2 mb-4 -mx-3 font-semibold text-blue-600 hover:underline" href="../">
       {{ '/src/_includes/svg/icons/chevron-left.svg' | svgContents('') | safe }}
       <span>Tilbake</span>
     </a>
 
-    <div class="grid items-start w-full max-w-screen-md gap-8 mx-auto">
-
+    <div class="grid items-start w-full max-w-screen-md gap-2 mx-auto rounded-xl overflow-clip">
       {% for item in pages %}
-        <div class="grid flex-1 gap-1 rounded-xl overflow-clip">
-          {% for item in collections.all | onlyTags('produkt', item) %}
-            {{ link(item) }}        
-          {% endfor %}
-        </div>
+        {% for item in collections.all | onlyTags('produkt', item) %}
+          {{ link(item) }}        
+        {% endfor %}
       {% endfor %}
     </div>
   </div>
