--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -1,7 +1,7 @@
 ---
 tags: ['produkt']
 // title: 'Søknad om refusjon av reiseutgifter knyttet til ortopediske hjelpemidler, parykk, tilpasningskurs, folkehøyskole, grunnmønster eller brystprotese'
-description: 'Basert på variant E av pleiepenger. Serif-font på avsnitt og lister i hovedspalte.'
+description: 'Innholdsfortegnelse med ingress. Kapittelnavigasjon med mulighet for å «bytteknapp» i bunnen. Hovedspalte på mobil  sticky sidespalte på desktop.'
 permalink: 'produkt/sykepenger/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -10,48 +10,15 @@ permalink: 'produkt/sykepenger/index.html'
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/tile.njk" import tile -%}
 
-{% block styles %}
-<style>
-  .prose > :where(p, ul, ol) {
-    font-family: "Source Serif 4", serif;
-    line-height: 1.75;
-  }
-  .prose h4 {
-    font-weight: 600;
-  }
-  .prose > div {
-    display: flex;
-    gap: 0.125rem;
-    grid-auto-flow: column;
-    border-radius: 0.375rem;
-    overflow: clip;
-  }
-  .prose > div .button {
-    background-color: #E6F0FF;
-    color: #0056B4;
-    border-width: 0;
-    flex-grow: 1;
-    inline-size: 48%;
-    border-radius: 0.125rem;
-  }
-  .prose > div .button:hover {
-    background: #CCE1FF;
-  }
-  .prose > div .button:nth-child(2) {
-    font-weight: 400;
-  }
-</style>
-{% endblock %}
-
 {%- block content -%}
 
   {% set chapters = collections.all| onlyTags('sykepenger', 'innhold') | sort(false, false, 'data.order') %}
 
-  <main class="grid py-page grid-cols-mini lg:grid-cols-maxi">
+  <main class="grid py-page grid-left-1 lg:grid-cols-left-2">
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-5xl/tight text-balance">{{ title | safe }}</h1>
-      <p class="mt-6 font-serif text-lg text-pretty max-w-prose">{{ ingress | safe }}</p>
+      <p class="mt-6 text-lg text-pretty max-w-prose">{{ ingress | safe }}</p>
 
       {# Audience #}
       {% if audience %}       
@@ -65,16 +32,17 @@ permalink: 'produkt/sykepenger/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="z-10 mt-8 isolate">
+    <div class="z-10 mt-12 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid gap-4 px-5 py-5 mt-2 rounded-lg bg-slate-100">
+      <ul class="grid gap-3 mt-2">
         {% for chapter in chapters.slice(0, -1) %}
-        <li class="relative grid grid-cols-[auto_1fr] items-baseline">
-          <span class="inline-flex items-center justify-center row-span-2 mr-2 font-semibold leading-none" aria-hidden="true">{{ loop.index }}.</span>
-          <a class="p-1 -m-1 text-blue-500 underline hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
+        <li class="relative pt-1 pb-2">
+          <a class="flex items-end gap-2 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
+            <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
+            {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-8 h-8 bg-slate-100 p-1.5 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }}
           </a>
-          <p class="col-start-2">{{ chapter.data.ingress | safe }}</p>
+          <p class="pr-4 mt-1.5 text-pretty opacity-80">{{ chapter.data.ingress | safe }}</p>
         </li>
         {% endfor %}
       </ul>
@@ -84,7 +52,7 @@ permalink: 'produkt/sykepenger/index.html'
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="grid grid-flow-row-dense pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
+      <section class="grid grid-flow-row-dense pt-12 pb-12 col-full grid-left-1 lg:grid-cols-left-2" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
         <div class="col-wide">
           <div class="grid items-end pl-8 rounded-lg bg-slate-100 pt-2xl aspect-[2/1]">
             <span class="font-black -mb-9 text-white text-[20em]/[0.8]">{{ loop.index }}</span>
@@ -96,26 +64,27 @@ permalink: 'produkt/sykepenger/index.html'
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | toc | length > 0%}
         <nav class="relative mt-8 mb-8 lg:order-1 lg:col-side">
-          <h3 class="py-2 font-semibold ">I dette kapittelet</h3>
-          <div class="z-10 rounded-lg lg:sticky lg:top-2 bg-slate-100">
-            <div class="px-5 py-3 border-b toc toc--b toc--sticky border-slate-200">
+          <h3 class="absolute inset-x-0 top-0 z-20 py-2 font-semibold bg-white">I dette kapittelet</h3>
+          <div class="z-10 lg:sticky lg:top-3">
+            <h3 class="py-2 font-semibold">{{ chapter.data.title }}</h3>
+            <div class="border-l lg:px-3 toc toc--b toc--sticky border-slate-200">
               {{ chapter.templateContent | toc | safe }}
             </div>
             <div class="relative" x-data="{ dropdownOpen: false }">
-              <button class="flex items-center gap-3 px-5 py-3 font-semibold text-blue-500 hover:text-blue-600 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
+              <button class="flex items-center gap-3 px-4 py-3 font-semibold text-blue-500 hover:text-blue-600 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
                 <span>Bytt kapittel</span>
                 {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 -translate-x-1 group-aria-expanded:rotate-180') | safe }}
               </button>
               <ol class="absolute w-full max-w-md gap-1 px-2 py-1.5 divide-y rounded-lg shadow-lg divide-slate-300 top-full mt-1 bg-slate-100" x-show="dropdownOpen" x-on:click.outside="dropdownOpen = false">
                 {% for chapter in chapters %}
-                <li class="py-1">
+                <li class="flex py-1">
                   {% if loop.index === chapterIndex %}
-                  <span class="flex items-center gap-3 px-3 pt-1.5 pb-1 font-semibold">
+                  <span class="flex justify-between w-full items-center gap-3 px-3 pt-1.5 pb-1 font-semibold">
                     {{ chapter.data.title }}
                     <span class="w-2 h-2 rounded-full bg-slate-500" aria-hidden="true"></span>
                   </span>
                   {% else %}
-                  <a class="flex items-center gap-3 px-3 pt-1.5 pb-1 font-semibold text-blue-500 hover:rounded hover:underline hover:bg-blue-100" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
+                  <a class="flex items-center gap-3 w-full justify-between px-3 pt-1.5 pb-1 font-semibold text-blue-500 hover:rounded hover:underline hover:bg-blue-100" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
                     {{ chapter.data.title }}
                   </a>
                   {% endif %}
