--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,13 +1,14 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-<header class="relative z-50 ">
-  <div class="text-sm tracking-widest text-center uppercase bg-white border-b border-slate-200 sm:hidden px-edge">
+<header class="relative z-50 bg-white" x-bind:class="(menuOpen || notifyOpen || loginOpen) && 'shadow-lg'" 
+>
+  <div class="text-sm tracking-widest text-center uppercase border-b border-slate-200 sm:hidden px-edge">
     <div class="py-1">
       {{ activeRole }}
     </div>
   </div>
 
-  <nav class="z-10 grid bg-white grid-left-1 lg:grid-cols-left-2">
+  <nav class="z-10 grid grid-left-1 lg:grid-cols-left-2">
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-wide">
 
       {# Logo #}
@@ -61,4 +62,12 @@
 </header>
 
 {# Overlay #}
-<button class="fixed inset-0 z-40 w-full h-full opacity-0 cursor-default bg-slate-800/80 backdrop-blur-xs" x-bind:class="(menuOpen || notifyOpen || loginOpen) ? 'opacity-100 transition-opacity duration-300' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false,  loginOpen = false"></button>
+<button 
+  class="fixed inset-0 z-40 w-full h-full cursor-default bg-slate-400/25 backdrop-blur-sm" 
+  x-show="(menuOpen || notifyOpen || loginOpen)" 
+  x-on:click="menuOpen = false, notifyOpen = false, loginOpen = false" 
+  x-on:keyup.escape.window="menuOpen = false, notifyOpen = false,  loginOpen = false"
+  x-transition:enter="transition ease-out duration-75"
+  x-transition:enter-start="opacity-0"
+  x-transition:enter-end="opacity-100"
+  ></button>
