--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,11 +1,11 @@
 {# Navigation (Private) #}
-<div class="absolute z-40 w-full h-0 transition inset-x" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
+<div class="absolute z-40 w-full h-0 transition inset-x" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown shadow-xl'" x-bind:aria-hidden="!menuOpen">
 
   {# Rollebytte #}
-  <div class="py-3 px-edge bg-slate-200">
-    <div class="grid content-center -mx-1 xs:gap-1 sm:gap-3 xs:text-center xs:-mx-5 sm:mx-0 xs:justify-center xs:grid-flow-col max-w-wide lg:mx-auto">
+  <div class="bg-white px-edge">
+    <div class="grid content-center -mx-1 xs:gap-2 sm:gap-8 xs:text-center xs:-mx-5 sm:mx-0 xs:justify-center xs:grid-flow-col max-w-wide lg:mx-auto">
     {% for role in audience %}
-      <a href="#" class="block py-1 px-5 rounded-full {{ 'bg-blue-500 text-white' if activeRole === role.title }}">{{ role.title }}</a>
+      <a href="#" class="block border-b-4 pt-5 pb-3 px-3 {{ 'border-blue-500 font-semibold' if activeRole === role.title else 'border-transparent hover:border-slate-200 transition opacity-90' }}">{{ role.title }}</a>
     {% endfor %}
     </div>
   </div>
